Changed in Product Model Class and Create, Index View Of Products and Product Controller

--- a/InternationalOnlineShopping/Web.config
+++ b/InternationalOnlineShopping/Web.config
@@ -73,7 +73,7 @@
   </system.codedom>
   <connectionStrings>
     
-  <add name="OnlineShoppingEntities" connectionString="metadata=res://*/Models.OnlineShopping.csdl|res://*/Models.OnlineShopping.ssdl|res://*/Models.OnlineShopping.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-2O3MS00I\SQLEXPRESS;initial catalog=OnlineShopping;user id=sukhee;password=sukhee;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <add name="OnlineShoppingEntities" connectionString="metadata=res://*/Models.OnlineShopping.csdl|res://*/Models.OnlineShopping.ssdl|res://*/Models.OnlineShopping.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-1K4A155J;initial catalog=OnlineShopping;user id=manoj;password=manoj;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
