Sukhee, added: 1) CheckOut.cshtml (view) 2) _ShippingAddress.cshtml (view)

--- a/InternationalOnlineShopping/InternationalOnlineShopping.csproj
+++ b/InternationalOnlineShopping/InternationalOnlineShopping.csproj
@@ -584,6 +584,8 @@
     <Content Include="Views\Products\Edit.cshtml" />
     <Content Include="Views\Products\Index.cshtml" />
     <Content Include="Views\Search\Index.cshtml" />
+    <Content Include="Views\Shopping\CheckOut.cshtml" />
+    <Content Include="Views\Shopping\_ShippingAddress.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
