some changes in Products and Register Controller

--- a/InternationalOnlineShopping/Web.config
+++ b/InternationalOnlineShopping/Web.config
@@ -14,11 +14,18 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="EncryptionSecurityKey" value="Online_Shopping_EncryptionSecurityKey" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    
-    <add key="ProductImage" value="/Content/Images/Products/"/>  
+
+    <add key="ProductImage" value="/Content/Images/Products/" />
   </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.6.1" />
+    <compilation debug="true" targetFramework="4.6.1">
+      <assemblies>
+
+
+        <add assembly="System.Web.Mvc, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+
+      </assemblies>
+    </compilation>
     <httpRuntime targetFramework="4.6.1" />
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
@@ -61,7 +68,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+        <bindingRedirect oldVersion="1.0.0.0-5.2.5.0" newVersion="5.2.5.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
@@ -72,8 +79,9 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    
-  <add name="OnlineShoppingEntities" connectionString="metadata=res://*/Models.OnlineShopping.csdl|res://*/Models.OnlineShopping.ssdl|res://*/Models.OnlineShopping.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-1K4A155J;initial catalog=OnlineShopping;user id=manoj;password=manoj;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+
+    <add name="OnlineShoppingEntities" connectionString="metadata=res://*/Models.OnlineShopping.csdl|res://*/Models.OnlineShopping.ssdl|res://*/Models.OnlineShopping.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-1K4A155J;initial catalog=OnlineShopping;user id=manoj;password=manoj;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
