Implemented SMTP functionality in the following Controller: 1) ShoppingController And added a new View called (Success) Installed Postal Package

--- a/InternationalOnlineShopping/InternationalOnlineShopping.csproj
+++ b/InternationalOnlineShopping/InternationalOnlineShopping.csproj
@@ -63,6 +63,12 @@
       <HintPath>..\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Postal, Version=1.0.0.0, Culture=neutral, PublicKeyToken=45719375b8b4d528, processorArchitecture=MSIL">
+      <HintPath>..\packages\Postal.Mvc5.1.2.0\lib\net45\Postal.dll</HintPath>
+    </Reference>
+    <Reference Include="RazorEngine, Version=3.4.1.0, Culture=neutral, PublicKeyToken=9ee697374c7e744a, processorArchitecture=MSIL">
+      <HintPath>..\packages\RazorEngine.3.4.1\lib\net45\RazorEngine.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -593,6 +599,9 @@
     <Content Include="Views\Shopping\PaymentSuccess.cshtml" />
     <Content Include="Views\Shopping\ErrorTransaction.cshtml" />
     <Content Include="Views\Register\ErrorLogin.cshtml" />
+    <Content Include="Views\Emails\_ViewStart.cshtml" />
+    <Content Include="Views\Emails\Web.config" />
+    <Content Include="Views\Emails\Success.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
