--- a/InternationalOnlineShopping/Web.config
+++ b/InternationalOnlineShopping/Web.config
@@ -61,7 +61,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-5.2.5.0" newVersion="5.2.5.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.5.0" newVersion="5.2.5.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
@@ -73,7 +73,7 @@
   </system.codedom>
   <connectionStrings>
     
-  <add name="OnlineShoppingEntities" connectionString="metadata=res://*/Models.OnlineShopping.csdl|res://*/Models.OnlineShopping.ssdl|res://*/Models.OnlineShopping.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-2O3MS00I\SQLEXPRESS;initial catalog=OnlineShopping;user id=sukhee;password=sukhee;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <add name="OnlineShoppingEntities" connectionString="metadata=res://*/Models.OnlineShopping.csdl|res://*/Models.OnlineShopping.ssdl|res://*/Models.OnlineShopping.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-33I38JG\SQLEXPRESS;initial catalog=OnlineShopping;user id=sa;password=seismograph;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
